--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
 
                 <!-- Logo -->
-                <a href="#" class="brand-logo"><img src="assets/img/BeeTrend.png" alt="BeeTrend Logo"
+                <a href="index.html" class="brand-logo"><img src="assets/img/BeeTrend.png" alt="BeeTrend Logo"
                         class="responsive-img center" style="height:auto; max-width: 100%; margin-bottom: 10px;"></a>
 
 
@@ -75,27 +75,8 @@
     <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
     <!-- Materialize JS-->
     <script type="text/javascript" src="materialize-css/dist/js/materialize.min.js"></script>
-
-
-
-    <script>
-        $(document).ready(function () {
-            //Menu Sidenav init
-            $('#menuSidenav').sidenav({
-
-            });
-            // Shopping cart Sidenav init
-            $('#shoppingCart').sidenav({
-                edge: 'right'
-            })
-            // Manual trigger desktop shopping cart
-            $('#desktopCart').click(function () {
-                $('#shoppingCart').sidenav('open');
-            });
-
-
-        });
-    </script>
+    
+    <script type="text/javascript" src="src/scripts.js"></script>
 
 </body>
 
