--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     <li><a href="#" class="black-text">Men</a></li>
                     <li><a href="#" class="black-text">Women</a></li>
                     <li><a href="#"><i class="medium material-icons black-text">account_circle</i></a></li>
-                    <li><a href="#" data-target="shoppingCart" id="desktopCart"><i class="material-icons black-text">shopping_cart</i>
+                    <li><a href="#" data-target="shoppingCart" id="desktopCart"><i
+                                class="material-icons black-text">shopping_cart</i>
                     </li></a>
                 </ul>
 
@@ -62,11 +63,56 @@
                     <h3 class="black-text center">CART</h3>
                 </ul>
 
-
             </div>
 
         </div>
     </nav>
+
+    <div class="container">
+
+        <!-- Hero Section -->
+
+        <!-- Logo and Catchphrase -->
+        <div class="row">
+            <div class="col s3 m3 l3">
+            </div>
+            <div class="col s6 m6 l6 center">
+                <img src="assets/img/BEELOGO Primary.png" alt="BeeTrend Logo" class="responsive-img center"
+                    style="height: auto; width: 200px; margin-top: 50px;">
+                <h4 class="font1 bold-text">"Bee Unique, Bee Stylish, BeeTrend."</h4>
+            </div>
+
+        </div>
+
+        <div style="height: 100px;"></div>
+
+        <!-- Men and Women Image-->
+        <div class="row">
+            <div class="col s12 m6 l5">
+                <div class="image-container">
+                    <a href=""><img src="assets/img/Clothes/Frontpage/Men.jpg" alt=""
+                            class="responsive-img hover-scale z-depth-2">
+                        <div class="overlay-text font1">MEN</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col l2"></div>
+            <div class="col s12 m6 l5 ">
+                <div class="image-container">
+                    <a href=""><img src="assets/img/Clothes/Frontpage/Women.jpg" alt=""
+                            class="responsive-img hover-scale z-depth-2">
+                        <div class="overlay-text font1">WOMEN</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        
+    </div>
+
+
+    <div style="height: 200px;"></div>
+
 
 
 
@@ -75,7 +121,7 @@
     <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
     <!-- Materialize JS-->
     <script type="text/javascript" src="materialize-css/dist/js/materialize.min.js"></script>
-    
+
     <script type="text/javascript" src="src/scripts.js"></script>
 
 </body>
