added new drops section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Navbar -->
     <nav>
-        <div class="nav-wrapper amber accent-1">
+        <div class="nav-wrapper amber accent-1 z-depth-1">
             <div class="container">
 
                 <!-- Logo -->
@@ -107,7 +107,21 @@
             </div>
         </div>
 
-        
+        <div style="height: 100px;"></div>
+
+        <!-- New Drops Section -->
+        <h4 class="font1 bold-text center amber lighten-4">NEW DROPS!</h4>
+
+
+        <div class="carousel center">
+            <a href="" class="carousel-item"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt=""></a>
+            <a href="" class="carousel-item"><img src="assets/img/Clothes/Women Page/Polo.png" alt=""></a>
+            <a href="" class="carousel-item"><img src="assets/img/Clothes/Men Page/Men.png" alt=""></a>
+        </div>
+
+
+
+
     </div>
 
 
