added sale section and call to action section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="amber lighten-5">
+<body>
 
     <!-- Navbar -->
     <nav>
@@ -110,7 +110,7 @@
         <div style="height: 100px;"></div>
 
         <!-- New Drops Section -->
-        <h4 class="font1 bold-text center amber lighten-4">NEW DROPS!</h4>
+        <h4 class="font1 bold-text center animated-gradient">NEW DROPS!</h4>
 
 
         <div class="carousel center">
@@ -118,18 +118,56 @@
             <a href="" class="carousel-item"><img src="assets/img/Clothes/Women Page/Polo.png" alt=""></a>
             <a href="" class="carousel-item"><img src="assets/img/Clothes/Men Page/Men.png" alt=""></a>
         </div>
-
-
-
-
     </div>
 
+    <div style="height: 100px;"></div>
 
-    <div style="height: 200px;"></div>
+    <!-- Sale section -->
+    <div class="gradient">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m6 l6">
+                    <div style="height: 150px;"></div>
+                    <h4 class="font1 bold-text center">SALE IS ON!</h4>
+                    <h2 class="font1 bold-text center">25% OFF</h2>
+                </div>
+                <div class="col s12 hide-on-med-and-up">        
+                    <div style="height: 150px;"></div>
+                </div>
+                <div class="col s12 m6 l6">
+                    <a href="">
+                        <img src="assets/img/Clothes/Frontpage/dude.jpg" alt="" class="responsive-img hover-scale z-depth-2" style="margin-top: 5px;">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div style="height: 100px;"></div>
 
-
-
+    <!-- Call to action -->
+    <div class="row" style="margin-left: 5px; margin-right: 5px;">
+        <div class="col s12 m3 l3 black border">
+            <a href=""><p class="flow-text center white-text">BeeTrend</p></a>
+            <a href=""><p class="white-text center">abreeze311@gmail.com</p></a>
+            <a href=""><p class="white-text center">Tel: 123-456-7890</p></a>
+        </div>
+        <div class="col s12 m3 l3 border">
+            <a href=""><p class="flow-text black-text center">New</p></a>
+            <a href=""><p class="center black-text">Women</p></a>
+            <a href=""><p class="center black-text">Men</p></a>
+        </div>
+        <div class="col s12 m3 l3 border">
+            <a href=""><p class="flow-text center black-text">About Us</p></a>
+            <a href=""><p class="center black-text">Faq</p></a>
+            <a href=""><p class="center black-text">Our Store</p></a>
+        </div>
+        <div class="col s12 m3 l3 border">
+            <a href=""><p class="flow-text center black-text">Terms & Conditions</p></a>
+            <a href=""><p class="center black-text">Shipping & Returns</p></a>
+            <a href=""><p class="center black-text">Payment Methods</p></a>
+        </div>
+    </div>
 
     <!-- Jquery -->
     <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
@@ -139,5 +177,9 @@
     <script type="text/javascript" src="src/scripts.js"></script>
 
 </body>
+
+<footer>
+    
+</footer>
 
 </html>
