--- a/men.html
+++ b/men.html
@@ -68,84 +68,11 @@
         </div>
     </nav>
 
-    <div class="container">
-
-        <!-- Hero Section -->
-
-        <!-- Logo and Catchphrase -->
-        <div class="row">
-            <div class="col s3 m3 l3">
-            </div>
-            <div class="col s6 m6 l6 center">
-                <img src="assets/img/BEELOGO Primary.png" alt="BeeTrend Logo" class="responsive-img center"
-                    style="height: auto; width: 200px; margin-top: 50px;">
-                <h4 class="font1 bold-text">"Bee Unique, Bee Stylish, BeeTrend."</h4>
-            </div>
-
-        </div>
-
-        <div style="height: 100px;"></div>
-
-        <!-- Men and Women Image-->
-        <div class="row">
-            <div class="col s12 m6 l5">
-                <div class="image-container">
-                    <a href=""><img src="assets/img/Clothes/Frontpage/Men.jpg" alt=""
-                            class="responsive-img hover-scale z-depth-2">
-                        <div class="overlay-text font1">MEN</div>
-                    </a>
-                </div>
-            </div>
-            <div class="col l2"></div>
-            <div class="col s12 m6 l5 ">
-                <div class="image-container">
-                    <a href=""><img src="assets/img/Clothes/Frontpage/Women.jpg" alt=""
-                            class="responsive-img hover-scale z-depth-2">
-                        <div class="overlay-text font1">WOMEN</div>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div style="height: 100px;"></div>
-
-        <!-- New Drops Section -->
-        <h4 class="font1 bold-text center animated-gradient">NEW DROPS!</h4>
 
 
-        <div class="carousel center">
-            <a href="" class="carousel-item"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt=""></a>
-            <a href="" class="carousel-item"><img src="assets/img/Clothes/Women Page/Polo.png" alt=""></a>
-            <a href="" class="carousel-item"><img src="assets/img/Clothes/Men Page/Men.png" alt=""></a>
-        </div>
-    </div>
+    <div style="height: 1000px;"></div>
 
-    <div style="height: 100px;"></div>
-
-    <!-- Sale section -->
-    <div class="gradient">
-        <div class="container">
-            <div class="row">
-                <div class="col s12 m6 l6">
-                    <div style="height: 150px;"></div>
-                    <h4 class="font1 bold-text center">SALE IS ON!</h4>
-                    <h2 class="font1 bold-text center">25% OFF</h2>
-                </div>
-                <div class="col s12 hide-on-med-and-up">        
-                    <div style="height: 150px;"></div>
-                </div>
-                <div class="col s12 m6 l6">
-                    <a href="">
-                        <img src="assets/img/Clothes/Frontpage/dude.jpg" alt="" class="responsive-img hover-scale z-depth-2" style="margin-top: 5px;">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div style="height: 100px;"></div>
-
-   
+    
 
     <!-- Jquery -->
     <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
@@ -157,15 +84,15 @@
 </body>
 
 <footer>
- <!-- Call to action -->
- <div class="row" style="margin-left: 5px; margin-right: 5px;">
+<!-- Call to action -->
+<div class="row" style="margin-left: 5px; margin-right: 5px;">
     <div class="col s12 m3 l3 black border">
         <a href="index.html"><p class="flow-text center white-text">BeeTrend</p></a>
         <a href=""><p class="white-text center">abreeze311@gmail.com</p></a>
         <a href=""><p class="white-text center">Tel: 123-456-7890</p></a>
     </div>
     <div class="col s12 m3 l3 border">
-        <a href="new.html"><p class="flow-text black-text center">New</p></a>
+        <a href="new"><p class="flow-text black-text center">New</p></a>
         <a href="women.html"><p class="center black-text">Women</p></a>
         <a href="men.html"><p class="center black-text">Men</p></a>
     </div>
