--- a/men.html
+++ b/men.html
@@ -68,11 +68,78 @@
         </div>
     </nav>
 
+    <div style="height: 70px;"></div>
 
 
-    <div style="height: 1000px;"></div>
+    <div class="container">
 
-    
+        <!-- Filter Button -->
+        <a href="" class="btn waves-effect waves-light amber lighten-3 black-text font1 sidenav-trigger" id="filter"
+            data-target="filterSideNav"><i class="material-icons">filter_alt</i></a>
+
+        <!-- Filter Sidenav -->
+        <ul id="filterSideNav" class="sidenav amber lighten-5">
+            <li>
+                <a href="index.html" class="center"><img src="assets/img/BeeTrend.png" alt="BeeTrend Logo"
+                        class="responsive-img center" style="height: auto; width: 40px; margin-top: 5px;"></a>
+            </li>
+            <div class="divider"></div>
+            <li><a href="" class="black-text">All Products</a></li>
+            <li><a href="new.html" class="black-text">New</a></li>
+            <li><a href="men.html" class="black-text">Men</a></li>
+            <li><a href="women.html" class="black-text">Women</a></li>
+            <li><a href="" class="dropdown-trigger amber lighten-3 black-text" data-target="sizeDropdown">Size</a></li>
+
+            <!-- Side Dropdown-->
+            <ul id="sizeDropdown" class="dropdown-content">
+                <li><a href="">Extra Small</a></li>
+                <li><a href="">Small</a></li>
+                <li><a href="">Medium</a></li>
+                <li><a href="">Large</a></li>
+                <li><a href="">Extra Large</a></li>
+            </ul>
+        </ul>
+
+        <div style="height: 70px;"></div>
+        <!-- Product Section -->
+        <div class="row">
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale">Product<br>$10.00</a>
+            </div>
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale">Product<br>$10.00</a>
+            </div>
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale" >Product<br>$10.00</a>
+            </div>
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale">Product<br>$10.00</a>
+            </div>
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale">Product<br>$10.00</a>
+            </div>
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale">Product<br>$10.00</a>
+            </div>
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale">Product<br>$10.00</a>
+            </div>
+            <div class="col s6 m3 l3 amber lighten-5 border" style="padding: 20px;">
+                <a href="clothes.html" class="black-text center font1"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt="" class="responsive-img hover-scale">Product<br>$10.00</a>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
+
+
+
+    <div style="height: 100px;"></div>
+
+
 
     <!-- Jquery -->
     <script type="text/javascript" src="jquery/dist/jquery.min.js"></script>
@@ -84,29 +151,53 @@
 </body>
 
 <footer>
-<!-- Call to action -->
-<div class="row" style="margin-left: 5px; margin-right: 5px;">
-    <div class="col s12 m3 l3 black border">
-        <a href="index.html"><p class="flow-text center white-text">BeeTrend</p></a>
-        <a href=""><p class="white-text center">abreeze311@gmail.com</p></a>
-        <a href=""><p class="white-text center">Tel: 123-456-7890</p></a>
+    <!-- Call to action -->
+    <div class="row" style="margin-left: 5px; margin-right: 5px;">
+        <div class="col s12 m3 l3 black border">
+            <a href="index.html">
+                <p class="flow-text center white-text">BeeTrend</p>
+            </a>
+            <a href="">
+                <p class="white-text center">abreeze311@gmail.com</p>
+            </a>
+            <a href="">
+                <p class="white-text center">Tel: 123-456-7890</p>
+            </a>
+        </div>
+        <div class="col s12 m3 l3 border">
+            <a href="new.html">
+                <p class="flow-text black-text center">New</p>
+            </a>
+            <a href="women.html">
+                <p class="center black-text">Women</p>
+            </a>
+            <a href="men.html">
+                <p class="center black-text">Men</p>
+            </a>
+        </div>
+        <div class="col s12 m3 l3 border">
+            <a href="">
+                <p class="flow-text center black-text">About Us</p>
+            </a>
+            <a href="">
+                <p class="center black-text">Faq</p>
+            </a>
+            <a href="">
+                <p class="center black-text">Our Store</p>
+            </a>
+        </div>
+        <div class="col s12 m3 l3 border">
+            <a href="">
+                <p class="flow-text center black-text">Terms & Conditions</p>
+            </a>
+            <a href="">
+                <p class="center black-text">Shipping & Returns</p>
+            </a>
+            <a href="">
+                <p class="center black-text">Payment Methods</p>
+            </a>
+        </div>
     </div>
-    <div class="col s12 m3 l3 border">
-        <a href="new"><p class="flow-text black-text center">New</p></a>
-        <a href="women.html"><p class="center black-text">Women</p></a>
-        <a href="men.html"><p class="center black-text">Men</p></a>
-    </div>
-    <div class="col s12 m3 l3 border">
-        <a href=""><p class="flow-text center black-text">About Us</p></a>
-        <a href=""><p class="center black-text">Faq</p></a>
-        <a href=""><p class="center black-text">Our Store</p></a>
-    </div>
-    <div class="col s12 m3 l3 border">
-        <a href=""><p class="flow-text center black-text">Terms & Conditions</p></a>
-        <a href=""><p class="center black-text">Shipping & Returns</p></a>
-        <a href=""><p class="center black-text">Payment Methods</p></a>
-    </div>
-</div>
 </footer>
 
 </html>
