changes in sidenav and added modal for login form

--- a/clothes.html
+++ b/clothes.html
@@ -52,6 +52,8 @@
 
                 <!-- Menu Sidenav -->
                 <ul id="menuSidenav" class="sidenav amber lighten-5">
+                    <img src="assets/img/BEELOGO Primary.png" alt="" class="responsive-img center" style="height: auto; width: 150px; margin: 60px;">
+                    <div class="divider"></div>
                     <li><a href="new.html" class="black-text">New</a></li>
                     <li><a href="men.html" class="black-text">Men</a></li>
                     <li><a href="women.html" class="black-text">Women</a></li>
@@ -61,6 +63,7 @@
                 <!-- Shopping Cart Sidenav-->
                 <ul id="shoppingCart" class="sidenav amber lighten-5">
                     <h3 class="black-text center">CART</h3>
+                    <div class="divider"></div>
                 </ul>
 
             </div>
@@ -68,7 +71,48 @@
         </div>
     </nav>
 
-    <div style="height: 1000px;"></div>
+
+    <div style="height: 100px;"></div>
+
+
+    <div class="container">
+
+        <!-- Add to Cart -->
+        <div class="row">
+
+            <!-- Product Image-->
+            <div class="col s12 m6 l6 amber lighten-5 border" style="padding-top: 100px; padding-bottom: 100px;">
+                <img src="assets/img/Clothes/Women Page/Women.png" alt="" class="responsive-img materialboxed">
+            </div>
+
+            <!-- Product Info -->
+            <div class="col s12 m6 l6">
+                <h3 class="bold-text">Product</h3>
+                <p>$10.00</p>
+                <div class="row">
+                    <div class="col s6 m6 l6">
+                        <input id="quantity" type="text" class="validate">
+                        <label for="quantity">Quantity</label>
+                    </div>
+                </div>
+                <div class="btn waves-effect waves-light lighten-3 black-text font1 btn-size amber lighten-3"> Add to Cart</div>
+                <br>
+                <br>
+                <div class="btn waves-effect waves-light green lighten-3 black-text btn-size">Buy Now</div>
+
+                <p class="flow-text">PRODUCT INFO</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A fuga dolore id error rem cumque beatae!
+                    Iusto, eius dolorum dolorem expedita minima, cumque explicabo quam id est quibusdam labore delectus?
+                </p>
+
+            </div>
+
+        </div>
+
+
+    </div>
+
+    <div style="height: 100px;"></div>
 
 
 
