--- a/men.html
+++ b/men.html
@@ -52,6 +52,8 @@
 
                 <!-- Menu Sidenav -->
                 <ul id="menuSidenav" class="sidenav amber lighten-5">
+                    <img src="assets/img/BEELOGO Primary.png" alt="" class="responsive-img center" style="height: auto; width: 150px; margin: 60px;">
+                    <div class="divider"></div>
                     <li><a href="new.html" class="black-text">New</a></li>
                     <li><a href="men.html" class="black-text">Men</a></li>
                     <li><a href="women.html" class="black-text">Women</a></li>
@@ -61,6 +63,7 @@
                 <!-- Shopping Cart Sidenav-->
                 <ul id="shoppingCart" class="sidenav amber lighten-5">
                     <h3 class="black-text center">CART</h3>
+                    <div class="divider"></div>
                 </ul>
 
             </div>
