added href to New drops carousel

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
 
         <div class="carousel center">
-            <a href="" class="carousel-item"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt=""></a>
-            <a href="" class="carousel-item"><img src="assets/img/Clothes/Women Page/Polo.png" alt=""></a>
-            <a href="" class="carousel-item"><img src="assets/img/Clothes/Men Page/Men.png" alt=""></a>
+            <a href="new.html" class="carousel-item"><img src="assets/img/Clothes/Men Page/T-shirt.png" alt=""></a>
+            <a href="new.html" class="carousel-item"><img src="assets/img/Clothes/Women Page/Polo.png" alt=""></a>
+            <a href="new.html" class="carousel-item"><img src="assets/img/Clothes/Men Page/Men.png" alt=""></a>
         </div>
     </div>
 
